small gilded age work

--- a/toi/localisation/english/usa_l_english.yml
+++ b/toi/localisation/english/usa_l_english.yml
@@ -1015,6 +1015,44 @@
  USA_research_civilian_finish: "Technological Ascendancy"
  USA_research_civilian_finish_desc: "We have done it. We have made great strides, and through our efforts we have ushered in a new age of discovery and science. We shall surely be well known across the world for our technological pre-eminence, but there is more work to be done."
  USA_maintain_native_treaties: "Honor Treaties with the Natives"
+ USA_maintain_native_treaties_desc: "The way that we've historically made and then broken treaties with the indigenous people of this continent has been atrocious. It's long past time that we begin to actually uphold the treaties that we've signed."
+ USA_diplomacy_trade_sioux: "Trade With The Sioux"
+ USA_diplomacy_trade_sioux_desc: "By expanding trade relations with the [SIX.GetAdjective] people, both of our nations will benefit economically."
+ USA_diplomacy_recognize_sioux: "Recognize The Sioux"
+ USA_diplomacy_recognize_sioux_desc: "The time has come to fully recognize the [SIX.GetAdjective] nation as its own independent and sovereign state."
+ USA_diplomacy_trade_cheyenne_arapaho: "Trade With The Cheyenne-Arapaho"
+ USA_diplomacy_trade_cheyenne_arapaho_desc: "By expanding trade relations with the [CHY.GetAdjective] people, both of our nations will benefit economically."
+ USA_diplomacy_recognize_cheyenne_arapaho: "Recognize The Cheyenne-Arapaho"
+ USA_diplomacy_recognize_cheyenne_arapaho_desc: "The time has come to fully recognize the [CHY.GetAdjective] nation as its own independent and sovereign state."
+ USA_diplomacy_trade_nez_perce: "Trade With The Nez Perce"
+ USA_diplomacy_trade_nez_perce_desc: "By expanding trade relations with the [NEZ.GetAdjective] people, both of our nations will benefit economically."
+ USA_diplomacy_recognize_nez_perce: "Recognize The Nez Perce"
+ USA_diplomacy_recognize_nez_perce_desc: "The time has come to fully recognize the [NEZ.GetAdjective] nation as its own independent and sovereign state."
+ USA_diplomacy_trade_comanche: "Trade With The Comanche"
+ USA_diplomacy_trade_comanche_desc: "By expanding trade relations with the [COM.GetAdjective] people, both of our nations will benefit economically."
+ USA_diplomacy_recognize_comanche: "Recognize The Comanche"
+ USA_diplomacy_recognize_comanche_desc: "The time has come to fully recognize the [COM.GetAdjective] nation as its own independent and sovereign state."
+ USA_diplomacy_trade_blackfoot: "Trade With The Blackfoot"
+ USA_diplomacy_trade_blackfoot_desc: "By expanding trade relations with the [BFT.GetAdjective] people, both of our nations will benefit economically."
+ USA_diplomacy_recognize_blackfoot: "Recognize The Blackfoot"
+ USA_diplomacy_recognize_blackfoot_desc: "The time has come to fully recognize the [BFT.GetAdjective] nation as its own independent and sovereign state."
+ USA_diplomacy_trade_shoshone: "Trade With The Shoshone"
+ USA_diplomacy_trade_shoshone_desc: "By expanding trade relations with the [SHO.GetAdjective] people, both of our nations will benefit economically."
+ USA_diplomacy_recognize_shoshone: "Recognize The Shoshone"
+ USA_diplomacy_recognize_shoshone_desc: "The time has come to fully recognize the [SHO.GetAdjective] nation as its own independent and sovereign state."
+ USA_diplomacy_trade_apache: "Trade With The Apache"
+ USA_diplomacy_trade_apache_desc: "By expanding trade relations with the [APA.GetAdjective] people, both of our nations will benefit economically."
+ USA_diplomacy_recognize_apache: "Recognize The Apache"
+ USA_diplomacy_recognize_apache_desc: "The time has come to fully recognize the [APA.GetAdjective] nation as its own independent and sovereign state."
+ USA_diplomacy_trade_navajo: "Trade With The Navajo"
+ USA_diplomacy_trade_navajo_desc: "By expanding trade relations with the [NAV.GetAdjective] people, both of our nations will benefit economically."
+ USA_diplomacy_recognize_navajo: "Recognize The Navajo"
+ USA_diplomacy_recognize_navajo_desc: "The time has come to fully recognize the [NAV.GetAdjective] nation as its own independent and sovereign state."
+ USA_diplomacy_trade_crow: "Trade With The Crow"
+ USA_diplomacy_trade_crow_desc: "By expanding trade relations with the [CRW.GetAdjective] people, both of our nations will benefit economically."
+ USA_diplomacy_recognize_crow: "Recognize The Crow"
+ USA_diplomacy_recognize_crow_desc: "The time has come to fully recognize the [CRW.GetAdjective] nation as its own independent and sovereign state."
+
  USA_diplomacy_natives: "Break Treaties with the Natives"
  #USA_diplomacy_natives_desc: "The Indians have long held land that is rightfully ours. We must begin to 'renegotiate' our treaties with them, and then swoop them up into our hands."
  USA_diplomacy_sioux: "Antagonize the Sioux"
@@ -2309,6 +2347,8 @@ federal_stranglehold_USA: "Federal Stranglehold On The Economy"
 
 # OPINION MODIFIERS
 usa_reaffirmed_monroe_doctrine: "Reaffirmed Monroe Doctrine"
+usa_fn_trade: "Trade Between Americans and First Nation"
+usa_fn_recognition: "Recognized First Nation's Independence"
 
 ## DYNAMIC MODIFIERS
 USA_navy_modifier: "The United States Navy"
