Working on Mex reform war focuses

--- a/toi/localisation/english/eoanbsys_national_crises_l_english.yml
+++ b/toi/localisation/english/eoanbsys_national_crises_l_english.yml
@@ -36,8 +36,13 @@ EOANBSYS_national_crisis_progress_scripted_low: "§G[?ROOT.EOANBSYS_national_cri
  EOANBSYS_national_crisis_desc_military_coup_crisis: "Insert Military Coup Description Here Fam"
  EOANBSYS_national_crisis_name_bakumatsu_crisis: "Bakumatsu Crisis"
  EOANBSYS_national_crisis_desc_bakumatsu_crisis: "For centuries, the Japanese Islands have remained isolated and at peace from the world. Now, with the increasing connectivity of global trade, foreign powers are increasingly interested in accessing our shores and markets. Now, our leaders are divided upon what opening to the world will fate us. Some see this as an opportunity to shift Japan from generations of stagnation. Others see foreigners in our land as an existencial threat to Japan itself."
- EOANBSYS_national_crisis_name_mexican_reform_war: "La Reforma"
- EOANBSYS_national_crisis_desc_mexican_reform_war: "With the deposition of the infamous military dictator, Santa Anna, the new Liberal Regime has been implmenting reforms across Mexico that are decades over due; weakening the power of the Church and Military over civilians. In return Reactionaries have been stirring unrest across the Nation."
+ EOANBSYS_national_crisis_name_mexican_reform_war: "[scripted_loc_MEX_la_reforma_title]"
+ EOANBSYS_national_crisis_name_mexican_reform_war_1: "La Reforma"
+ EOANBSYS_national_crisis_name_mexican_reform_war_2: "Guerra de Reforma"
+ EOANBSYS_national_crisis_desc_mexican_reform_war: "[scripted_loc_MEX_la_reforma_desc]"
+ EOANBSYS_national_crisis_desc_mexican_reform_war_1: "With the deposition of the infamous military dictator, Santa Anna, the new Liberal Regime has been implmenting reforms across Mexico that are decades over due; weakening the power of the Church and Military over civilians. In return Reactionaries have been stirring unrest across the Nation."
+ EOANBSYS_national_crisis_desc_mexican_reform_war_2: "Due to Comonfort's mishandling of the Tacubaya Conspiracy, the Nation is now embroiled in a destructive civil war with the Reactionaries crying 'Religion y Fueros', or 'Religion and Privileges'. We must confront these rebels and safeguard our Constitution!"
+ EOANBSYS_national_crisis_desc_mexican_reform_war_3: "Due to Comonfort's mishandling of the Plan of Tacubaya, the Nation is now embroiled in a destructive civil war with the Radicals crying out for their precious and destructive and ungodly constitution. We must fulfill Tacubaya and safeguard our Nation!"
 
  EOANBSYS_national_crisis_time_scripted_7: "Weekly"
  EOANBSYS_national_crisis_time_scripted_14: "Semi-Weekly"
