Torpedo Loc update

--- a/toi/localisation/english/equipment_l_english.yml
+++ b/toi/localisation/english/equipment_l_english.yml
@@ -3949,7 +3949,7 @@
  EQ_MOD_CAT_battery_12in_early_TITLE: "12 Inch Guns"
  EQ_MOD_CAT_battery_13in_early_TITLE: "13 Inch Guns"
  EQ_MOD_CAT_battery_16in_early_TITLE: "16 Inch Guns"
- EQ_MOD_CAT_secondary_47mm_early_TITLE: "47mm Secondaries"
+ EQ_MOD_CAT_secondary_47mm_early_TITLE: "47mm Secondaries" 
  EQ_MOD_CAT_ship_screen_armor_TITLE: "Screen Ship Armor"
  EQ_MOD_CAT_ship_engine_sail_screen_TITLE: "Sail Masts"
  EQ_MOD_CAT_ship_engine_sail_gunboat_TITLE: "Sail Masts"
@@ -5106,12 +5106,21 @@
  ship_mine_sweeper_2_desc: "Improved Minesweeping Equipment."
  ship_torpedo: "Torpedoes"
  ship_torpedo_desc: "Torpedoes to attack enemy (capital) ships. Launched by Light Cruisers, Destroyers, Torpedo Boats..."
- ship_torpedo_0: "Whitehead Torpedo Launcher"
+ ship_torpedo_0: "Spar Torpedo"
  ship_torpedo_0_short: "Torpedo I"
- ship_torpedo_0_desc: "A simple torpedo launcher with one tube."
- ship_torpedo_1: "Twin Tube Torpedo Launcher"
+ ship_torpedo_0_desc: "An explosive charge on a pole that is detonated when near an enemy vessel."
+ ship_torpedo_1: "Spar Torpedo Launch"
  ship_torpedo_1_short: "Torpedo II"
- ship_torpedo_1_desc: "A simple torpedo launcher with two tubes."
+ ship_torpedo_1_desc: "Small ships that can be launched from a capital ship to deploy spar torpedoes against an enemy."
+ ship_torpedo_2: "2x Spar Torpedo Launch"
+ ship_torpedo_2_short: "Torpedo III"
+ ship_torpedo_2_desc: "Small ships that can be launched from a capital ship to deploy spar torpedoes against an enemy."
+ ship_torpedo_3: "Whitehead Torpedo Launcher"
+ ship_torpedo_3_short: "Torpedo IV"
+ ship_torpedo_3_desc: "A simple torpedo cradle with one mounted torpedo."
+ ship_torpedo_4: "2x Whitehead Torpedo Launcher"
+ ship_torpedo_4_short: "Torpedo V"
+ ship_torpedo_4_desc: "Two simple torpedo cradles with one mounted torpedo each."
  ship_torpedo_tesla: "Early Radio-Guided Torpedo"
  ship_torpedo_tesla_short: "\"Tesla\" Torpedo"
  ship_torpedo_tesla_desc: "An experimental torpedo guided by radio waves."
