historical is done!

--- a/toi/localisation/english/austria_l_english.yml
+++ b/toi/localisation/english/austria_l_english.yml
@@ -540,6 +540,9 @@
  austria.208.t: "Calling on the German Confederation"
  austria.208.d: "After the aggression of §b[PIE.GetNameWithFlag]§! towards us, we are now at war with them. While this conflict may turn out fine for us, it would be in our best interests to call on fellow members of the German Confederation to assist us. We don't need everyone as of right now, though, so we will exclusively call on §2[PRS.GetNameWithFlag]§! for now."
  austria.208.a: "Try to hold the Rhine."
+ austria.209.t: "Armistice of Villafranca"
+ austria.209.d: "Our loss of Milan has been devastating for the war effort. While we may be able to count on defending the fort city of Mantua, §3[FRA.GetNameWithFlag]§! has offered an armistice and an offer for peace. If we accept this now, it will assist us in securing our territories farther east and avoiding further losses in the region."
+ austria.209.a: "We can't afford to fight any longer."
  
  ###NATIONALIST THREAT EVENTS
  #NATIONALIST AGITATION EVENTS
@@ -1818,6 +1821,8 @@
  AUS_novara_expedition_returned_flag: "The §YNovara Expedition§! has returned to Trieste."
  
  AUS_focus_build_ironclads_effect_tt: "§GThis will, over time, unlock §Ydecision§! to expand our navy, including domestic ship production.§!"
+
+ AUS_villafranca_accept_tt: "\n§YWe will accept the armistice with§! §3[FRA.GetNameWithFlag]§! §Yand§! §b[PIE.GetNameWithFlag]§!§Y.\n\nThe terms will be as follows:\n -§!§3[FRA.GetNameWithFlag]§! §Yannexes§! §C[159.GetName]§!§Y.§!"
  ###Austrian Opinion Modifiers###
  AUS_CRIMEAN_WAR_AFTERMATH_DISASTROUS: "Aftermath of the Crimean War"
  AUS_CRIMEAN_WAR_AFTERMATH_VERY_BAD: "Aftermath of the Crimean War"
