--- a/toi/localisation/english/prussia_l_english.yml
+++ b/toi/localisation/english/prussia_l_english.yml
@@ -552,6 +552,9 @@ prussiaforeign.53.a: "Whatever's necessary."
 prussiaforeign.54.t: "Skirting the Warning From Russia"
 prussiaforeign.54.d: "With a request from §O[AUS.GetNameWithFlag]§! to assist them in their war, we have to consider the warning we have previously received from §G[RUS.GetNameWithFlag]§!. While we don't need to attack §3[FRA.GetNameWithFlag]§! yet, this may change soon."
 prussiaforeign.54.a: "We'll see what we can do."
+prussiaforeign.55.t: "Stationing Men on the Rhine"
+prussiaforeign.55.d: "With the fall of Milan, §b[PIE.GetNameWithFlag]§! may push into the German Confederation soon. Should this happen, we will be obligated to join the war with §O[AUS.GetNameWithFlag]§!. For this reason, we should station troops on our border with §3[FRA.GetNameWithFlag]§! in the Rhineland."
+prussiaforeign.55.a: "Piedmont should stop soon..."
 
 #Prussian Elections
 prussiaelection.1.t: "Parliamentary Elections of 1858"
