--- a/toi/localisation/english/france_l_english.yml
+++ b/toi/localisation/english/france_l_english.yml
@@ -533,6 +533,8 @@ FRA_SE_portrait_9_desc_text: "Jean-Baptiste Philibert\n Neutral Bonapartist"
  FRA_mission_carmaux_albi_rail: "Carmaux-Albi Railway"
  FRA_mission_caen_argentan_rail: "Caen-Argentan Railway"
  FRA_mission_caen_cherbourg_rail: "Caen-Cherbourg Railway"
+ FRA_Villafranca_accept_tooltip: "\n§YWe will propose an armistice with§! §O[AUS.GetNameWithFlag]§!§Y.\n\nThe terms will be as follows:\n -§!§3[FRA.GetNameWithFlag]§! §Yannexes§! §C[159.GetName]§!§Y.§!"
+ FRA_Lombardia_transfer_tooltip: "\n§b[PIE.GetNameWithFlag]§! §Yannexes§! §C[159.GetName]§!§Y.§!"
  
 ##################################################
 #                     DECISIONS
@@ -923,6 +925,15 @@ FRA_SE_portrait_9_desc_text: "Jean-Baptiste Philibert\n Neutral Bonapartist"
  nap_france_flavor.41.t: "The Support of the Populous"
  nap_france_flavor.41.d: "While our population reluctantly supports the war as of right now, the war developing in a way that threatens the Pope could lead to discontent from the population."
  nap_france_flavor.41.a: "Another thing to worry about."
+ nap_france_flavor.42.t: "Armistice of Villafranca"
+ nap_france_flavor.42.d: "With §O[AUS.GetNameWithFlag]§! being pushed back to Mantua, it may be risky to continue advancing past Lombardy. A continued march may spark war with the German Confederation, a risk that we don't want to take. Also, the Concordat of 1801 is still in effect, forcing us to uphold the sovereignty of the Pope. Our continued presence in the war could implicate us in threatening the independence of §S[PAP.GetNameWithFlag]§!. For these reasons, it would be best to send an offer of armistice to §O[AUS.GetNameWithFlag]§!."
+ nap_france_flavor.42.a: "Send them the armistice."
+ nap_france_flavor.43.t: "Transferring Lombardy to Sardinia"
+ nap_france_flavor.43.d: "With our victory in the Second War of Independence, §O[AUS.GetNameWithFlag]§! has ceded us the territory of Lombardy. This was clearly a petty act against §b[PIE.GetNameWithFlag]§!, so we shall cede them their rightful territory."
+ nap_france_flavor.43.a: "Why would we keep this..?"
+ nap_france_flavor.44.t: "Prussians on the Border"
+ nap_france_flavor.44.d: "After the fall of Milan, §2[PRS.GetNameWithFlag]§! has began stationing troops on our shared border. This strikes concern, as war on our own soil could be devastating for the people of France. This buildup has also resulted in decreased morale among our citizens and resulted in draft dodging."
+ nap_france_flavor.44.a: "Oh..."
 
   # Event Text
 
