Some playtest updates

--- a/toi/localisation/english/diplomacy_l_english.yml
+++ b/toi/localisation/english/diplomacy_l_english.yml
@@ -286,7 +286,7 @@
  DIPLOMACY_LEND_LEASE_PRODUCTION: "Our production"
  DIPLOMACY_LEND_LEASE_HEADER_IN_STORAGE: "In storage"
  DIPLOMACY_LEND_LEASE_HEADER_PRODUCING: "Producing"
- DIPLOMACY_LEND_LEASE_HEADER_LL: "Lend-leasing"
+ DIPLOMACY_LEND_LEASE_HEADER_LL: "Military Aid"
  DIPLOMACY_LEND_LEASE_AMOUNT_AND_FREQ_DESC: "Choose the amount of the equipment to be delivered each month."
  DIPLOMACY_LEND_LEASE_SET_FROM_PRODUCTION: "Or choose a percentage of current production."
  DIPLOMACY_LEND_LEASE_REASON_ENEMY: "We can't send military aid to enemies."
@@ -355,7 +355,7 @@
  DIPLOMACY_INCOMING_LEND_LEASE_REASON_ENEMY: "We can't request military aid from our enemies."
  DIPLOMACY_INCOMING_LEND_LEASE_REASON_TARGET_AT_WAR: "To request military aid, we must be at war."
  DIPLOMACY_INCOMING_LEND_LEASE_REASON_PUPPET: "Our autonomy level is reducing the world tension limit with our master"
- DIPLOMACY_INCOMING_LEND_LEASE_REASON_PUPPET: "We can always request lend-lease equipment from our master."
+ DIPLOMACY_INCOMING_LEND_LEASE_REASON_PUPPET: "We can always request military aid equipment from our master."
  DIPLOMACY_INCOMING_LEND_LEASE_REASON_PUPPET_DESC: "It will lower our autonomy"
  DIPLOMACY_REQUEST_LICENSED_PRODUCTION_TITLE: "Request License Production"
  DIPLOMACY_MANAGE_LICENSED_PRODUCTION_EXISTING_TITLE: "Manage License Production"
@@ -372,7 +372,7 @@
  DIPLOMACY_SHOW_AVAILABLE_LICENSES: "Show §Havailable licenses§!"
  DIPLOMACY_CANCEL_LICENSED_PRODUCTION_TITLE: "Cancel Production Licenses"
  DIPLOMACY_CANCEL_LICENSED_PRODUCTION_ACTION_DESC: "Cancel all production licenses that can be cancelled"
- DIPLOMACY_REQUEST_ACCESS_TO_LICENCE_PRODUCTION_TITLE: "Negotiate License"
+ DIPLOMACY_REQUEST_ACCESS_TO_LICENCE_PRODUCTION_TITLE: "Negotiate Licenses"
  DIPLOMACY_REQUEST_ACCESS_TO_LICENCE_PRODUCTION_ACTION_DESC: "Request access to see production licenses"
  DIPLOMACY_REQUEST_ACCESS_TO_LICENCE_PRODUCTION_REQUEST_DESC: "$COUNTRY|H$ is asking to access your production to make a production license request"
  DIPLOMACY_CANCEL_ACCESS_TO_LICENCE_PRODUCTION_ACTION_DESC: "Cancel their access to seeing our production licenses"
@@ -474,7 +474,7 @@
  DIPLOMACY_NOFACTION: "§T$TARGET|UH$ is not a member of any faction.§!"
  DIPLOMACY_FACTION_DESC: "A faction is a coalition of nation states that are allied to each other. If someone declares war on a faction member, all other faction members will automatically join the war. Faction members can be asked to join offensive wars, but they may refuse.\n\nOnly the faction leader may invite new members to the faction."
  anti_comintern_pact_opinion: "Anti-Comintern Pact Signatory"
- anti_soviet_pact_call_refused: "Refused To Honor Anti-Soviet Pact"
+ anti_soviet_pact_call_refused: "Refused To Honor Anti-[SOV.GetAdjective] Pact"
  refused_anti_comintern_pact_opinion: "Rejected Anti-Comintern Pact"
  tripartite_pact_opinion: "Anti-Soviet Pact Signatory"
  refused_tripartite_pact_opinion: "Rejected Anti-Soviet Pact"
@@ -627,6 +627,7 @@
  ger_cze_diplomatic_focus: "German-Czechoslovakian Diplomacy Focus"
  ger_ita_alliance_focus: "German-Italian Alliance Focus"
  ger_spa_alliance_focus: "German-Spanish Alliance Focus"
+ ger_por_alliance_focus: "German-Portuguese Alliance Focus"
  ger_pol_diplomacy_focus: "German-Polish Diplomacy Focus"
  ger_naval_intimidation_focus: "German Naval Intimidation Focus"
  GER_anschluss_rejected: "Austria refused Anschluss"
@@ -757,8 +758,8 @@
  at_war_with_faction: "At war with our faction members"
  NO_NATIONAL_FOCUS: "No National Focus set"
  UNKNOWN_INFO: "Unknown Focus"
- INTEL_IS_TOO_LOW_LOW: "Our decryption is too low to get information about their current national focus progress."
- INTEL_IS_TOO_LOW: "Our decryption is too low to get information about what they have already achieved in their national focus tree."
+ INTEL_IS_TOO_LOW_LOW: "Our intel is too low to get information about their current national focus progress."
+ INTEL_IS_TOO_LOW: "Our intel is too low to get information about what they have already achieved in their national focus tree."
  justifying_war_goal: "War goal Justification"
  DIPLOMACY_DEM_NO_THREAT_ON_DEPENDENDY: "It is not possible to justify war goals on each other in a puppet relationship."
  DIPLOMACY_DEM_NO_THREAT_JUSTIFYING_WAR: "Democracies can't justify war goals against countries that have not generated world tension."
@@ -886,7 +887,7 @@
  small_increase: "Increase in opinion"
  medium_increase: "Increase in opinion"
  large_increase: "Increase in opinion"
- FRA_ban_communism: "Banned Communism"
+ FRA_ban_communism: "Ban Communism"
  FRA_leftist_rhetoric_communism: "Leftist Rhetoric"
  FRA_leftist_rhetoric_democratic: "Leftist Rhetoric"
  FRA_leftist_rhetoric_fascism: "Leftist Rhetoric"
@@ -1272,13 +1273,13 @@
  GER_accept_british_naval_dominance_opinion: "Accepted British Naval Dominance"
  GER_netherlands_kaiser_accept_opinion: "Returned the Kaiser"
  GER_netherlands_kaiser_decline_opinion: "Taken the Kaiser Hostage"
- QNG_xian_refused: "Refused to form the United Front"
+ CHI_xian_refused: "Refused to form the United Front"
  JAP_broke_the_london_naval_treaty: "Broke the London Naval Treaty"
- QNG_refused_support: "Refused Support"
- QNG_cooperation_with_the_communists_positive: "Cooperation With the Communists"
- QNG_cooperation_with_the_communists_negative: "Cooperation With the Communists"
- QNG_cooperation_with_the_nationalists_positive: "Cooperation With the Nationalists"
- QNG_cooperation_with_the_nationalists_negative: "Cooperation With the Nationalists"
+ CHI_refused_support: "Refused Support"
+ CHI_cooperation_with_the_communists_positive: "Cooperation With the Communists"
+ CHI_cooperation_with_the_communists_negative: "Cooperation With the Communists"
+ CHI_cooperation_with_the_nationalists_positive: "Cooperation With the Nationalists"
+ CHI_cooperation_with_the_nationalists_negative: "Cooperation With the Nationalists"
  POR_rejected_lease: "Rejected Lease"
  USA_special_relationship: "Special Relationship"
  unilateral_war: "Unilateral War"
@@ -1393,11 +1394,131 @@
  POR_portuguese_trade_minor: "Portuguese trade"
  POR_rejected_the_royal_iberian_alliance: "Rejected the Royal Iberian Alliance"
  POR_the_fifth_empire_has_threatening_ambitions: "The Fifth Empire has threatening ambitions"
+ HUN_has_threatening_ambitions: "Hungary has threatening ambitions"
  POR_iberian_communism: "Iberian Communism"
  DIPLOMACY_SET_MOST_FAVOURABLE_tt: "Designates §C[$RIGHT$.GetNameDef]§! as §GMost Favoured§! Country"
  DIPLOMACY_SET_RIVAL_tt: "Designates §C[$RIGHT$.GetNameDef]§! as §RRival§! Country"
  
  #1.12 BBA
+ GRE_discarded_the_schachtplan: "Discarded the Schachtplan"
+ GRE_reneged_on_debt: "Reneged on Debt"
+ GRE_strategic_partners: "Strategic Partners"
+ GRE_denied_our_ambitions: "Denied our Ambitions"
+ GRE_denied_our_ambitions_ITA: "Denied our Ambitions"
+ GRE_honored_their_promise: "Honored their Promise"
+ GRE_left_us_to_fight_alone: "Left us to fight alone"
+ GRE_exploited_our_generosity: "Exploited our Generosity"
+ GRE_shunned_our_investors: "Shunned our Investors"
+ GRE_greek_turncoats: "Greek Turncoats"
+ GRE_underhanded_rogues: "Underhanded Rogues"
+ GRE_aegean_troublemakers: "Aegean Troublemakers"
+ GRE_strategic_enemy: "Strategic Enemy"
+ GRE_fascist_leanings: "Fascist Leanings"
+ GRE_fascist_trading_bloc: "Fascist Trading Bloc"
+ GRE_treacherous_little_filcher: "Treacherous Little Filcher!"
+ GRE_tobacco_exports: "Tobacco Exports"
+ GRE_luxury_exports: "Luxury Exports"
+ GRE_strong_trading_ties: "Strong Trading Ties"
+ TUR_reliable_trade_partner: "Reliable Trade Partner"
+ TUR_regional_force_of_stability: "Regional Force of Stability"
+ TUR_valued_strategic_partners: "Valued Strategic Partner"
+ TUR_clodius_agreement: "The Clodius Agreement"
+ TUR_imperialist_puppets: "Imperialist Puppet"
+ TUR_aiding_our_enemies: "Aiding our Enemies"
+ BUL_hindered_planned_expansion: "Hindered Planned Expansion"
+ TUR_likeminded_ultranationalists: "Likeminded Ultranationalists"
+ TUR_righteous_traditionalists: "Righteous Traditionalists"
+ TUR_assertive_regional_defender: "Assertive Regional Defender"
+ TUR_turkish_meddlers: "Turkish Meddlers"
+ TUR_unreliable_debt_ditchers: "Unreliable Debt Ditchers"
+ TUR_traitors_of_the_revolution: "Traitors of the Revolution"
+ TUR_released_hatay_to_us: "Released Hatay to Us"
+ TUR_oppressors_of_turks: "Oppressors of Turks"
+ TUR_pact_of_power: "Pact of Power"
+ TUR_insulted_our_honour: "Insulted Our Honor"
+ TUR_joint_resource_extraction: "Joint Resource Extraction Efforts"
+ BUL_condemned_imro: "Condemned IMRO"
+ BUL_supported_imro: "Supported IMRO"
+ BUL_supplied_imro: "Sent Weapons to IMRO"
+ BUL_approached_germany: "Approached Germany"
+ BUL_approached_italy: "Approached Italy"
+ BUL_approached_the_uk: "Approached the United Kingdom"
+ BUL_approached_the_ussr: "Approached the Soviet Union"
+ BUL_approached_yugoslavia: "Approached Yugoslavia"
+ BUL_approached_greece: "Approached Greece"
+ BUL_strengthened_relations_with_us: "Strengthened Relations with us"
+ BUL_bulgarian_claims_recognized: "Recognized our Claims"
+ BUL_bulgarian_claims_not_recognized: "Did not Recognize our Claims"
+ BUL_donated_aircraft: "Aircraft Donations"
+ BUL_rejected_our_donation: "Rejected our Donation"
+ BUL_complied_with_our_demands: "Complied with our Demands"
+ BUL_rejected_our_demands: "Rejected our Demands"
+ BUL_honored_bulgarian_claims: "Honored Bulgarian Claims"
+ BUL_lifted_arms_restrictions: "Lifted our Arms Restrictions"
+ BUL_refused_to_lift_arms_restrictions: "Refused to lift arms restrictions"
+ BUL_granted_uranium_mining_rights: "Granted Uranium Mining Rights"
+ BUL_industrial_investments_in_bulgaria: "Industrial Investments in Bulgaria"
+ BUL_seized_our_bulgarian_subsidiaries: "Seized our Bulgarian Subsidiaries"
+ BUL_bought_guns: "Bought Guns"
+ BUL_sold_guns: "Sold Guns"
+ BUL_arms_trade: "Arms Trade"
+ BUL_rejected_our_proposal: "Rejected our Proposal"
+ BUL_helped_in_civil_war: "Helped us in the Civil War"
+ BUL_balkan_communism: "Balkan Communism"
+ BUL_balkan_communism_trade: "Balkan Communism"
+ BUL_communist_menace: "Communist Menace"
+ BUL_communist_menace_trade: "Communist Menace"
+ BUL_threatening_neighbor: "Threatening Neighbor"
+ BUL_old_quarrels_left_behind: "Old Quarrels Left Behind"
+ BUL_refused_unification: "Refused Unification"
+ BUL_territorial_arbitration: "Territorial Arbitration"
+ BUL_territorial_arbitration_negative: "Territorial Arbitration"
+ BUL_ferdinand_is_back: "Ferdinand I is Back"
+ BUL_old_enemies: "Old Enemies"
+ BUL_built_ships: "Bulgarian Ships Built"
+ BUL_kicked_us_from_faction: "Kicked us from their Faction"
+ BFTB_incongruous_neighbors: "Incongruous Neighbors"
+ BFTB_balkan_pact_ally: "The Balkan Pact"
+ BFTB_balkan_pact_enemy: "The Balkan Pact"
+ BFTB_ROM_abandoned_us: "Abandoned Us"
+ BFTB_ROM_stood_by_us: "Stood By Us"
+ DIPLOMACY_JOINED_WAR_EXTRA_CALLED_SINGLE: "\n$COUNTRY|UY$ also joins the war along with them."
+ DIPLOMACY_JOINED_WAR_EXTRA_CALLED_ENTRY: "$COUNTRY|Y$"
+ DIPLOMACY_JOINED_WAR_EXTRA_CALLED_FIRST_ENTRY: "$COUNTRY|YU$"
+ DIPLOMACY_JOINED_WAR_EXTRA_CALLED_MULTIPLE: "\n$LIST$ also join the war along with them."
+ SOV_pressured_our_government: "Pressured our government"
+ SOV_stirring_the_masses: "Stirring the masses"
+ SOV_supported_china_good: "Supported China in the conflict"
+ SOV_supported_china_bad: "Supported China in the conflict"
+ SOV_supported_japan_good: "Supported Japan in the conflict"
+ SOV_supported_japan_bad: "Supported Japan in the conflict"
+ SOV_cooperating_with_us: "Cooperating with us against other Chinese Warlords"
+ SOV_cooperating_with_other: "Cooperating with other Chinese Warlords against us"
+ SOV_sent_us_weapons: "Sent us weapons"
+ SOV_soviet_japanese_pact_against_usa: "Soviet-Japanese Anti-USA Pact"
+ SOV_refused_to_follow_our_guidelines: "Refused to follow our guidelines"
+ SOV_anti_fascist_policies_good: "Anti-Fascist Policies"
+ SOV_anti_fascist_policies_bad: "Anti-Fascist Policies"
+ SOV_anti_capitalist_policies_good: "Anti-Capitalist Policies"
+ SOV_anti_capitalist_policies_bad: "Anti-Capitalist Policies"
+ SOV_cordial_relations_developed_by_soviet_diplomat: "Cordial relations developed by Soviet diplomat"
+ SOV_strengthened_relations_with_us: "Strengthen relations with us"
+ SOV_strengthened_relations_with_us_trade: "Strengthen relations with us"
+ SOV_complied_with_our_demands: " Complied with our demands"
+ SOV_rejected_our_demands: " Rejected our demands"
+ SOV_attempted_to_infiltrate_manhattan_project: "Attempted to infiltrate the Manhattan Project"
+ SOV_attempted_to_infiltrate_our_atomic_program: "Attempted to infiltrate our atomic program"
+ SOV_policies_of_collective_security_opinion: "Policies of collective security"
+ SOV_rejected_defensive_pact: "Rejected defensive pact"
+ SOV_international_socialist_association: "International Socialist Association"
+ SOV_international_socialist_association_bad: "$SOV_international_socialist_association$"
+ SOV_support_for_exiles: "Support for the exiles"
+ SOV_fourth_international_good: "Supports the Fourth International"
+ SOV_fourth_international_bad: "Follower of the Stalinist Doctrine"
+ HAS_EMBARGO: "We already embargo them"
+ DIPLOMACY_PUPPET_NO: "We are a puppet"
+ DIPLOMACY_OUR_PUPPET_NO: "They are our subject"
+ THEY_OUR_FACTION: "They are also in $FACTION|H$"
  HAS_NOT_EMBARGO: "We are not embargoing them"
  EMBARGO_COST2: "Embargoing $NAME|Y$ will cost $COST|Y$£pol_power£.\n"
  DIPLOMACY_EMBARGO_TITLE: "Issue Trade Embargo"
@@ -1597,7 +1718,7 @@
 
 #### Shared Military Branch ####
 
-SMB_naval_arms_race: "Trigered South American Naval Arms Race"
+SMB_naval_arms_race: "Triggered South American Naval Arms Race"
 
 #### ARGENTINA ####
 
@@ -1610,3 +1731,7 @@ ARG_close_ties_with_america_idea: "Mutually Beneficial Support"
 ARG_close_ties_with_america_idea_desc: "A symbol of closer ties between [USA.GetNameDef] and [ARG.GetNameDef]."
 ARG_embargoed_us: "[ARG.GetNameDefCap] Embargoed Us"
 ARG_embargoed_us_desc: "[ARG.GetNameDefCap] embargoed us due to pressure from [USA.GetNameDef]."
+
+#Belgium
+
+BEL_embargoed_us: "Belgium embargoed us"
