more playtest fixes

--- a/toi/localisation/english/state_l_english.yml
+++ b/toi/localisation/english/state_l_english.yml
@@ -1,6 +1,7 @@
 ﻿l_english:
  STATE_UPGRADE_BUILDING: "Upgrade $BUILDING|H$."
  STATE_UPGRADE_BUILDING_DESC: "Days to construct: $COST|H$"
+ PROVINCE_BUILDING_LEVEL: "$BUILDING|H$ (level: $LEVEL|H$/$MAX_LEVEL|H$)"
  STATE_BUILDING_LEVEL: "$BUILDING|H$ (State level: $LEVEL|H$)"
  STATE_BUILDING_LEVEL_SHARED_SLOTS: "$LEVEL|H$ $BUILDING|H$"
  STATE_BUILDING_INCONSTRUCTION: "Under construction: $LEVEL|H$"
@@ -21,7 +22,8 @@
  STATE_CORE: "§T$COUNTRY|H$ has $STATE|H$ as a core state.§!"
  STATE_CORE_DESC: "A core state is regarded as an integral part of your nation. If it is owned by another nation you have a justifiable reason to declare war to retake it, and if successful it will not need an occupation policy - it will simply become part of your homeland once retaken."
  STATE_CLAIM: "§T$COUNTRY|H$ has a claim on $STATE|H$.§!"
- STATE_POPULATION:3 "§HRecruitable Population§!: $AVAIL|*Y$/$MAXAVAIL|*Y$\n§HCivilian Population§!: $LOCKED|*Y$/$MAXLOCKED|*Y$\n"
+ STATE_CONTESTED_OWNER: "§T$COUNTRY|H$ is contested owner of $STATE|H$.§!"
+ STATE_POPULATION: "§HRecruitable Population§!: $AVAIL|*Y$/$MAXAVAIL|*Y$\n§HCivilian Population§!: $LOCKED|*Y$/$MAXLOCKED|*Y$\n"
  MONTHLY_BASE_GROWTH: "Base: $VALUE|H%2$"
  STATE_POPULATION_GROWTH: "§HMonthly growth§!: $VALUE|%2$ ( $AVAIL|*+$ recruitable, $LOCKED|*+$ civilian )"
  LOCAL_MANPOWER_ACCESSIBLE_FACTOR: "Base fit for service: §R-$VAL|%$§!"
@@ -47,6 +49,18 @@
  UNLOCKED_SLOTS_STATE_EXTRA: "Additional Slots in this State: $NUM|Y$"
  PROVINCE_STATE_CATERGORY_TOOLTIP: "Category: $CATEGORY|Y$"
  PROVINCE_STATE_IMPASSABLE: "Impassable: §RTroops may not enter§!"
+ wasteland: "Wasteland"
+ city: "Urban Region"
+ large_city: "Dense Urban Region"
+ metropolis: "Metropolis Region"
+ megalopolis: "Megalopolis Region"
+ town: "Developed Rural Region"
+ large_town: "Sparse Urban Region"
+ rural: "Rural Region"
+ enclave: "Enclave"
+ small_island: "Small Island"
+ tiny_island: "Tiny Island"
+ pastoral: "Pastoral Region"
  OCCUPATION_BREAKDOWN: "Occupation Breakdown:"
  OCCUPATION_BREAKDOWN_ENTRY: "\n$COUNTRY|Y$: $OCCUPATION|Y%0$"
  STATE_OWNER_RESISTANCE_NON_CORE_INFO: "$COUNTRY|H$ will only have access to $MANPOWER|-%.0$ of the state's manpower."
