--- a/toi/localisation/english/buildings_l_english.yml
+++ b/toi/localisation/english/buildings_l_english.yml
@@ -49,7 +49,7 @@
  synthetic_refinery_rubber_desc: "This Building provides the state it is built in with §YRubber§!. The amount of resources depends on your technology."
  radar_station: "Radar Station"
  radar_station_plural: "Radar Stations"
- radar_station_desc:2 "Radar allows you to gain intel on enemy troops in nearby states.\nA higher radar level in a state increases the effective range of the radar.\nRadar also provides the state with better detection of enemy air forces, giving your planes a better chance to engage them.\nIn addition the radars are increasing detection of enemy fleets at sea."
+ radar_station_desc: "Radar allows you to gain intel on enemy troops in nearby states.\nA higher radar level in a state increases the effective range of the radar.\nRadar also provides the state with better detection of enemy air forces, giving your planes a better chance to engage them.\nIn addition radar increases the detection of enemy fleets at sea."
  rocket_site: "Rocket Site"
  rocket_site_plural: "Rocket Sites"
  rocket_site_desc: "This building provides the state with deployment for produced rockets."
@@ -113,12 +113,16 @@
  BUILDING_SABOTAGED: "$BUILDING$ sabotaged!"
  BUILDING_REPAIRED: "$BUILDING$ repaired!"
  BUILDING_DAMAGE_REASON_COLLATERAL: "$BUILDING$ suffered collateral damage!"
+ BUILDING_SCORCHED: "$BUILDING$ scorched!"
  NUKE_DROPPED: "Nuclear bomb dropped!"
  BUILDING_DAMAGED: "Damaged levels: $DAMAGED|-$/$CURRENT|H$"
  CAPACITY: "$VAL$/$MAX$"
  CAPACITY_PLUS: "$VAL$+$PLUS$/$MAX$"
- AIR_BASE_LEVEL: "$NAME|H$: $VAL|Y$"
- AIR_BASE_LEVEL_UNKNOWN: "$NAME|H$"
+ AIR_BASE_LEVEL: "§HAir Base§! in $NAME|H$, Level $VAL|H$"
+ ROCKET_SITE_LEVEL: "§HRocket site§! in $NAME|H$, Level $VAL|H$"
+ AIR_BASE_LEVEL_UNKNOWN: "§HAir Base§! in $NAME|H$"
+ ROCKET_SITE_LEVEL_UNKNOWN: "§HRocket site§! in $NAME|H$"
+ GUN_EMPLACEMENT_LEVEL_UNKNOWN: "§H$mega_gun_emplacement$§! in $NAME|H$"
  ROCKET_SITE_CAPACITY: "Capacity: $VAL$/$MAX$"
  NAVAL_BASE_LEVEL_UNKNOWN: "§YNaval Port§!"
  NAVAL_BASE_LEVEL: "§YNaval Port§!: $VAL|Y$"
@@ -126,7 +130,7 @@
  NAVAL_BASE_CAPACITY: "Capacity: $USED|1G$/$TOTAL|0G$"
  NAVAL_BASE_CAPACITY_OVER: "Capacity: $USED|1R$/$TOTAL|0R$"
  NAVAL_BASE_CAPACITY_PENALTY: "Repair power capacity penalty: $PENALTY|%0R$"
- BUILDING_LEVEL:1 "§TLevel: $LEVEL|H$§!"
+ BUILDING_LEVEL: "§TState level: $LEVEL|H$§!"
  BUILDING_CURRENT_MAX_LEVEL_CAPPED: "Building current max level limited by:"
  BUILDING_CURRENT_MAX_LEVEL_NONCAPPED: "Building current max level is not limited."
  BUILDING_CURRENT_MAX_LEVEL_CAPPED_MANPOWER: "State population: $MANPOWER|*Y$"
@@ -137,13 +141,15 @@
  BUILDING_SLOT_REMOVE_CONSTRUCTION_LEVEL: "Remove a construction level of the building."
  BUILDING_SLOT_REMOVE_CONVERSION_LEVEL: "Revert the building conversion."
  BUILDING_SLOT_REMOVE_COOLDOWN: "In wartimes it's only possible to remove buildings once every $DAYS|Y$ days. Next removal can be done at $DATE|Y$."
- CLICK_TO_CONVERT:1 "§GClick§! to convert to $BUILDING|Y$"
- INSERT_CONVERSION: "§GCtrl+Click§! to convert and place at the beginning of the queue."
- INSERT_CONSTRUCTION: "§GCtrl+Click§! to build and place at the beginning of the queue."
- BUILDING_CURRENT_MAX_LEVEL: "Max level for $BUILDING|Y$: $MAXLEVEL|Y$"
+ CLICK_TO_CONVERT: "§GClick§! to convert to $BUILDING|Y$"
+ INSERT_CONVERSION: "§GCtrl+Click§! to convert and place at the beginning of the queue.\n§GAlt+Click§! to convert and place at the end of the queue."
+ INSERT_CONSTRUCTION: "§GCtrl+Click§! to build and place at the beginning of the queue.\n§GAlt+Click§! to build and place at the end of the queue."
+ BUILDING_CURRENT_MAX_LEVEL: "Potential Max level for $BUILDING|Y$: $MAXLEVEL|Y$"
  BUILDING_CURRENT_MAX_LEVEL_SHARED_SLOTS: "Max $BUILDING|Y$ in a State: $MAXLEVEL|Y$"
+ BUILDING_TERRAIN_MAX_LEVEL: "Current Max level in $TERRAIN|H$: $MAXLEVEL|H$"
+ BUILDING_TERRAIN_BASE_MAX_LEVEL: "Base: $MAXLEVEL|H$"
  BUILDING_LEVEL_HEALTH: "Level health: $VALUE|%2Y$"
- AIR_DEFENSE_IN_STATE: "\n§HTotal bombing damage reduction:§! $TOT|%G$\nAnti-Air: $AA|-%$\n"
+ AIR_DEFENSE_IN_STATE: "\n§HIndustry bombing damage reduction:§! $TOT_INDUSTRY|%G$\n§HOther bombing damage reduction:§! $TOT|%G$\nAnti-Air: $AA|-%$\n"
  RADAR_ONMAP_TOOLTIP: "§HRadar station§! level: $LVL|G$/$TOT|H$\nBelongs to: $WHO|H$"
  RADAR_ONMAP_DAMAGED_TOOLTIP: "§HRadar station§! level: $LVL|R$/$TOT|H$\nBelongs to: $WHO|H$"
  RADAR_ONMAP_TOOLTIP_COVERAGE: "\n§HRegions coverage:§!"
@@ -267,6 +273,8 @@
  trench: "Trench"
  trench_desc: "Trenches are used to increase infantry defensiveness in a province."
  trench_plural: "Trenches"
+ BUILDING_SPEED_FACTOR: "§0Conditional Construction Speed Factor:§! $VALUE|Y2$"
+ BUILDING_SPEED_FACTOR_WITH_TRIGGER: "$BUILDING_SPEED_FACTOR$\n§0Only if:§!"
  modifier_production_speed_trench: "§YTrench§! construction speed"
  modifier_production_speed_trench_desc: "Modifies the speed of Trench construction."
  modifier_production_speed_trench_factor: "§YTrench§! construction speed"
