--- a/toi/localisation/english/_eoanbr_equipment_l_english.yml
+++ b/toi/localisation/english/_eoanbr_equipment_l_english.yml
@@ -748,6 +748,7 @@ infantry_equipment_mg_9: "XM-250"
  tech_rocket_artillery_staged_rockets_desc: "description"
  rocket_artillery_equipment_2: "1910 Rocket Artillery"
  rocket_artillery_equipment_2_desc: "description"
+ siege_artillery_equipment: "Siege Artillery Equipment"
  siege_artillery_equipment_0: "1750 Mortar"
  siege_artillery_equipment_0_desc: "description"
  siege_artillery_equipment_1: "1820 Siege Gun"
