--- a/toi/localisation/english/equipment_l_english.yml
+++ b/toi/localisation/english/equipment_l_english.yml
@@ -3937,6 +3937,7 @@
  EQ_MOD_CAT_ship_early_heavy_TITLE: "Heavy Early Batteries"
  EQ_MOD_CAT_ship_early_extra_light_TITLE: "Light Early Batteries"
  EQ_MOD_CAT_ship_early_extra_medium_TITLE: "Medium Early Batteries"
+ EQ_MOD_CAT_combat_monitor_arms_TITLE: "Monitor Anti-Ship Armaments"
 #  EQ_MOD_CAT_ship_cannon_battery_TITLE: "Cannon Battery"
 #  EQ_MOD_CAT_ship_RML_battery_TITLE: "Rifled Muzzle Loader Battery"
 #  EQ_MOD_CAT_ship_RBL_battery_TITLE: "Rifled Breach Loader Batteries and Barbettes"
