--- a/toi/localisation/english/politics_l_english.yml
+++ b/toi/localisation/english/politics_l_english.yml
@@ -34,11 +34,11 @@
  POLITICS_REPLACE_IDEA_POLITICAL_POWER_DESC: "Do you want to replace §Y$OLD_IDEA$§! with §Y$NEW_IDEA$§! for a total cost of £pol_power $COST|-0$?"
  CANT_TAKE_IDEAS: "§RYou can't assign ministers or change laws at the moment.§!\n§HCan't Assign Ideas:§!"
  POLITICS_IDEA_COST: "Cost (£pol_power ): $VALUE|-0$"
- POLITICS_IDEA_COST_COMPACT:1 "$VALUE$"
- DECISION_COST_COMPACT:1 "£pol_power  $VALUE|0$"
+ POLITICS_IDEA_COST_COMPACT: "$VALUE|0$"
+ DECISION_COST_COMPACT: "£pol_power  $VALUE|0$"
  POLITICS_IDEA_NOT_AVAILABLE_ICON: "£trigger_no $VALUE$"
  POLITICS_IDEA_REMOVE_COST: "Cost to remove (£pol_power ): $VALUE|0$"
- POLITICS_IDEA_NO_REMOVE: "§RCannot remove.§!\n"
+ POLITICS_IDEA_NO_REMOVE: "\n§RCannot remove.§!\n"
  POLITICS_IDEA_CANCEL_DESC: "Will be canceled if:"
  POLITICS_GOAL_INSTANT_EFFECT: "On selection:"
  POLITICS_GOAL_OBJECTIVE: "§TObjectives:§!"
@@ -69,15 +69,16 @@
  POLITICS_EXPIRE_TIME: "Expires after: $TIME|Y$ days."
  POLITICS_SUCCESS_PROGRESS: "Goal success at: $PROGRESS|Y%0$"
  POLITICAL_POLITICAL: "Government & Politics"
- MANAGE_OCCUPIED_TERRITORIES:2 "Occupied territories"
+ MANAGE_OCCUPIED_TERRITORIES: "Occupied territories"
  MANAGE_SUBJECTS: "Manage subjects"
  manage_occupied_territories_no_occupation: "§RYou are not occupying any non-core territory at the moment.§!"
  MANAGE_OCCUPIED_TERRITORIES_HEADER: "Foreign Territory"
  MANAGE_EXILED_GOVERNMENTS: "Exiled Governments"
  SHOW_EXILED_STATUS: "Exiled Status"
+ SHOW_EXILED_STATUS_LEGITIMACY: "Legitimacy: $VALUE|0H$"
  SHOW_COLLABORATIONS: "Collaborations"
  SHOW_EXILED_COLLABORATORS: "Exiled/Collaborators"
- POLITICAL_RESEARCH_BONUS_ENTRY:2 "$CATEGORY$: $FACTOR|=+0%$"
+ POLITICAL_RESEARCH_BONUS_ENTRY: "$CATEGORY$: $FACTOR|=+0%$"
  POLITICAL_EQUIPMENT_TYPE_BONUS_ENTRY: "$ARCHETYPE$:"
  IDEA_SUB_CATEGORY_LIMIT: "§YMay only have one§!"
  country_idea_desc: "Ideas motivating and guiding our country."
@@ -113,8 +114,8 @@
  REPLACE_GOAL_TITLE: "Replace Goal"
  REPLACE_GOAL_DESC: "Do you want to replace $OLD|H$ with $NEW|H$?"
  CHANGE_IDEA: "§GClick to change $IDEA|H$§!"
- REMOVE_IDEA:1 "§GClick to remove $IDEA|H$§!"
  REMOVE_IDEA_POLITICAL_POWER: "§RYou don't have enough §HLegislative Power§! to remove this idea.\nCost to remove (£pol_power ): $VALUE|0$§!"
+ REMOVE_IDEA: "§GClick to remove $IDEA|H$§!"
  REMOVE_IDEA_ARMY_XP: "§RYou don't have enough §HArmy XP§! to remove this idea.\nCost to remove (£pol_power ): $VALUE|0$§!"
  POLITICS_GOAL_LEADS_TO: "§TLeads to future goals:§!"
  POLITICS_GOAL_LEADS_TO_ENTRY: "$GOAL|Y$"
@@ -129,7 +130,7 @@
  POLITICS_TIMED_ACTIVITY_FINISHED: "§TExpected to finish: $DATE|H$§!"
  POLITICS_TIMED_ACTIVITY_WARGOAL_DESC: "§TWhen $OWNER|H$ has finished justifying the war goal it will be able to declare war on $TARGET|H$§!"
  FOCUS_AT_WAR: "§TTakes $PEACE|H0$ days to complete§!"
- POLITICS_TIMED_ACTIVITY_MAINTAIN_COST:1 "$NAME|Y$ against $TARGET|Y$: $COST|=+2$ $FREQUENCY$"
+ POLITICS_TIMED_ACTIVITY_MAINTAIN_COST: "$NAME|Y$ against $TARGET|Y$: $COST|=+2$ $FREQUENCY$"
  IDEA_WINDOW_TITLE: "$GROUP$"
  IDEA_WINDOW_ADD: "Select $GROUP|Y$"
  IDEA_WINDOW_SWITCH: "Replace §Y$IDEA$?§!"
@@ -144,12 +145,12 @@
  COUP_START_STATE: "You can pick the state where the revolution will spread from. If no state is picked the source state will be determined under other conditions."
  POLITICS_STAGE_COUP_STATE: "Spreading revolution wind from $STATE|H$."
  POLITICS_STAGE_COUP_EQUIPMENT_ENTRY: "$EQUIPMENT$: $CURRENT|0$/$TOTAL|0$"
- POLITICS_STAGE_COUP_INVALIDATE:1 "\n\n§HA coup will automatically be canceled if the target ends up in a civil war, changes to the targeted ideology or joins the same faction.§!"
+ POLITICS_STAGE_COUP_INVALIDATE: "\n\n§HA coup will automatically be canceled if the target ends up in a civil war, changes to the targeted ideology or joins the same faction.§!"
  WEEKLY_CHANGE: "Weekly change:\n"
  STABILITY_EFFECT_HEADER: "\n§HCurrently affected by:§!\n"
  WAR_SUPPORT_EFFECT_HEADER: "\n§HCurrently affected by:§!\n"
- RELEASE_NATION:1 "Release Nation"
- RETURN_TERRITORY:1 "Return Territory"
+ RELEASE_NATION: "Release Nation"
+ RETURN_TERRITORY: "Return Territory"
  RELEASE_NATION_STATES: "§TLiberates $COUNTRY|H$ in $LIST|H$§!"
  RELEASE_NATION_STATES_DESC: "§GRight-click§! to go to first §HCore State§!"
  RETURN_TERRITORY_STATES: "§TReturns $LIST|H$ to $COUNTRY|H$§!"
@@ -158,13 +159,13 @@
  POLITICS_ADVISOR_NAME_PATTERN: "$NAME$ $SURNAME$"
  PARTY_AND_IDEOLOGY_GROUP: "$PARTY|H$ ($GROUP|H$)"
  RELEASE_NATION_NOT_POSSIBLE: "§TLiberating $COUNTRY|H$ in $LIST|H$§! is not possible:\n\n"
- RELEASE_NATION_NOT_POSSIBLE_EMPTY:1 "§TLiberating $COUNTRY|H$ is not possible:§!\n\n"
+ RELEASE_NATION_NOT_POSSIBLE_EMPTY: "§TLiberating $COUNTRY|H$ is not possible:§!\n\n"
  RETURN_TERRITORY_NOT_POSSIBLE: "§TReturning $LIST|H$ to $COUNTRY|H$§! is not possible:\n\n"
  RETURN_TERRITORY_NOT_POSSIBLE_EMPTY: "§TReturning territories to $COUNTRY|H$§! is not possible:\n\n"
  RETURN_TERRITORY_NOT_POSSIBLE_AT_WAR: "You are at war with them."
  RETURN_STATES_NOT_POSSIBLE_NOT_CONTROLLED: "The states in red are not being controlled by you."
  RETURN_STATES_NOT_POSSIBLE_NOT_OWNED: "You are not the owner of any of their territories yet."
- POLITICS_IDEA_STAT_TRADE:1 "£resources_to_market_icon£  $VALUE|H0%$"
+ POLITICS_IDEA_STAT_TRADE: "£resources_to_market_icon£  $VALUE|H0%$"
  POLITICS_IDEA_STAT_RECRUITABLE: "£manpower_icon£  $VALUE|=+1%$"
  IDEA_COST_COMPACT_POLITICAL_POWER: "£pol_power  $VALUE|0$"
  IDEA_COST_COMPACT_ARMY_XP: "£army_experience  $VALUE|0$"
@@ -174,6 +175,7 @@
  POLITICS_ADVISOR_COST: "Cost (£pol_power ): $VALUE|-0$"
  COMMAND_POWER_ADVISOR_COST: "\nCost (£command_power ): $VALUE|-0$"
  COMMAND_POWER_ALLOCATION_ADVISOR_COST: "\nAllocates (£command_power ): $VALUE|-0$"
+ COMMAND_POWER_CAP_ADD_ADVISOR: "\nMax. Command Power increase (£command_power ): $VALUE|+=0$"
  POLITICS_ADVISOR_PP_COST_SHORT: "£pol_power $VALUE|-0$"
  POLITICS_ADVISOR_CP_COST_SHORT: "£command_power $VALUE|-0$"
  POLITICS_ADVISOR_CP_ALLOCATION_COST_SHORT: "£command_power $VALUE|-0$"
