--- a/toi/localisation/english/equipment_l_english.yml
+++ b/toi/localisation/english/equipment_l_english.yml
@@ -4450,6 +4450,16 @@
  ship_armor_capital_hardwood_1: "Reinforced Hardwood Ship Armor"
  ship_armor_capital_hardwood_1_short: "Hardwood Armor II"
  ship_armor_capital_hardwood_1_desc: "Ship armor made for capital ships out of reinforced hardwood."
+ EQ_MOD_CAT_iron_monitor_armor_title: "Ironclad Monitor Armor"
+ monitor_armor_0: "4.5in. Iron Armor"
+ monitor_armor_0_short: "Ironclad Armor I"
+ monitor_armor_0_desc: "Ironclad Monitor Armor"
+ monitor_armor_1: "5in Iron Armor"
+ monitor_armor_1_short: "Ironclad Armor II"
+ monitor_armor_1_desc: "Ironclad Monitor Armor"
+ monitor_armor_2: "7.5in Iron Armor"
+ monitor_armor_2_short: "Ironclad Armor III"
+ monitor_armor_2_desc: "Ironclad Monitor Armor"
  EQ_MOD_CAT_ship_armor_capital_ironclad_TITLE: "Ironclad Ship Armor"
  EQ_MOD_CAT_ship_armor_capital_ironclad_DESC: "Ship Armor made of ironplates mounted on top of thick wooden backing"
  ship_armor_capital_ironclad_0: "5in. Ironclad Ship Armor"
