--- a/toi/localisation/english/equipment_l_english.yml
+++ b/toi/localisation/english/equipment_l_english.yml
@@ -3737,18 +3737,18 @@
  USA_infantry_equipment_mg_3: "M1919A6 Browning .30 cal"
  USA_flamethrower_equipment_0: "M1 Flamethrower"
  USA_flamethrower_equipment_1: "M1A1 Flamethrower"
- USA_field_artillery_equipment_0: "Model 1841 6-pounder Gun"
- USA_field_artillery_equipment_0_short: "6pdr Gun"
- USA_field_artillery_equipment_1: "Model 1857 12-pounder Napoleon"
- USA_field_artillery_equipment_1_short: "12pdr Napoleon"
- USA_rifled_field_artillery_equipment_0: "10-pounder Parrot Rifled Muzzle-Loader"
- USA_rifled_field_artillery_equipment_0_short: "10pdr Parrot Rifle"
- USA_siege_gun_0: "200-pounder Parrot Rifled Muzzle-Loader"
- USA_siege_gun_0_short: "200pdr Parrot Rifle"
- USA_howitzer_artillery_equipment_0: "Model 1841 12-pounder Howitzer"
- USA_howitzer_artillery_equipment_0_short: "12pdr Howitzer"
- USA_howitzer_artillery_equipment_1: "12-pounder Dahlgren Boat Howitzer"
- USA_howitzer_artillery_equipment_1_short: "12pdr Dahlgren"
+ USA_field_artillery_equipment_3: "Model 1841 6-pounder Gun"
+ USA_field_artillery_equipment_3_short: "6pdr Gun"
+#  USA_field_artillery_equipment_1: "Model 1857 12-pounder Napoleon"
+#  USA_field_artillery_equipment_1_short: "12pdr Napoleon"
+ USA_field_artillery_equipment_4: "10-pounder Parrot Rifled Muzzle-Loader"
+ USA_field_artillery_equipment_4_short: "10pdr Parrot Rifle"
+ USA_siege_artillery_equipment_3: "200-pounder Parrot Rifled Muzzle-Loader"
+ USA_siege_artillery_equipment_3_short: "200pdr Parrot Rifle"
+ USA_howitzer_artillery_equipment_1: "Model 1841 12-pounder Howitzer"
+ USA_howitzer_artillery_equipment_1_short: "12pdr Howitzer"
+ USA_howitzer_artillery_equipment_2: "12-pounder Dahlgren Boat Howitzer"
+ USA_howitzer_artillery_equipment_2_short: "12pdr Dahlgren"
  USA_modern_tank_equipment_2: "M48 Patton"
  USA_modern_tank_equipment_2_short: "M48"
  USA_modern_tank_equipment_2_desc: ""
